# jao

./: .dockerignore  AI_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  rustfmt.toml  test.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dev.yml  github-release.yml  release.yml
scripts/: gen.docs.sh  publish.sh
src/: config.rs  error.rs  errors.rs  hash.rs  help_screen.rs  main.rs  script_discovery.rs  storage.rs  trust.rs  trust_manifest.rs
src/actions/: completion.rs  dispatch.rs  fingerprint.rs  info.rs  list.rs  mod.rs  run.rs
src/actions/completion_scripts/: jao.bash  jao.zsh
src/config/: load.rs  mod.rs  models.rs  persistence.rs
src/config/models/: jao_config.rs  jao_config_file.rs  jao_context.rs  mod.rs
src/platform/: mod.rs  osstr.rs  unix.rs
src/trust/: fingerprint.rs  manifest.rs  mod.rs  models.rs  persistence.rs
src/trust/models/: mod.rs  script_trust_state.rs  trusted_file_record.rs  trusted_manifest.rs
tests/: cli.rs  completion.rs  script_discovery.rs  trust_and_fingerprint.rs
