[package]
name = "jao"
version = "0.2.2"
edition = "2024"
description = "Discover and run workspace scripts from a simple CLI"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RoyPrinsGH/jao"
documentation = "https://docs.rs/jao"
keywords = ["cli", "scripts", "workspace", "automation", "task-runner"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["trust-manifest"]
trust-manifest = ["config"]
config = ["dep:home", "dep:serde", "dep:toml"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
home = { version = "0.5", optional = true }
jwalk = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
sha2 = "0.10"
thiserror = "2"
toml = { version = "1", optional = true }
