[package]
name = "jao"
version = "0.3.7"
edition = "2024"
description = "Discover and run workspace scripts from a simple CLI"
license = "Apache-2.0"
readme = "README.md"
authors = ["Roy Prins <royprinsgm@gmail.com>"]
repository = "https://github.com/RoyPrinsGH/jao"
documentation = "https://docs.rs/jao"
keywords = ["cli", "scripts", "workspace", "automation", "task-runner"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["trust-manifest"]
trust-manifest = ["config"]
config = ["dep:home", "dep:serde", "dep:toml"]

[dependencies]
clap = "4.6.1"
hex = "0.4"
home = { version = "0.5", optional = true }
ignore = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
sha2 = "0.11"
thiserror = "2"
toml = { version = "1", optional = true }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
